<resources>
    <string name="app_name">K22411CASampleProject</string>
    <string name="title_login_username">User name:</string>
    <string name="title_login_username_hint">Enter your user name</string>
    <string name="title_login_password">Password:</string>
    <string name="title_password_hint">Enter password</string>
    <string name="title_login_save_info">Save Login Info</string>
    <string name="title_login_button" />
    <string name="title_login_btn">Login</string>
    <string name="title_confirm_exit_title">Confirm Exit</string>
    <string name="title_confirm_exit_message">Are you sure you want to exit</string>
    <string name="title_confirm_exit_OK">OK</string>
    <string name="title_confirm_exit_cancle">CANCEL</string>
    <string name="title_main_employees">Employee</string>
    <string name="title_main_customer">Customer</string>

    <!-- Optional from the other branch that may still be useful -->
    <string name="title_healthcare">Healthcare</string>
    <string name="title_salary" />
    <string name="title_salary_employee" />
    <string name="title_em_salary">Salary</string>
    <string name="title_employee_healthcare">Employee Healthcare</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close" />
    <string name="title_exit_close">Close</string>
    <string name="title_Category">Category</string>
    <string name="titleProduct">Product</string>
    <string name="titleCategory">Category</string>
    <string name="titleAdvancedProduct">Advanced Product</string>
    <string name="title_create_new_customer">New Customer</string>
    <string name="title_broadcast">Broadcast Advertsing</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Detail</string>
    <string name="title_customer_id">Customer Id</string>
    <string name="title_customer_name">Customer Name:</string>
    <string name="title_customer_email">Customer Email</string>
    <string name="title_customer_phone">Phone</string>
    <string name="title_new">NEW</string>
    <string name="title_save">SAVE</string>
    <string name="title_remove">Remove</string>
    <string name="title_category">Category</string>
    <string name="title_add_product">Add New Product</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_product_id">Product id:</string>
    <string name="title_product_name">Product name:</string>
    <string name="title_product_quantity">Quantity:</string>
    <string name="title_product_price">Price:</string>
    <string name="title_product_categoryid">CategoryID:</string>
    <string name="title_imageid">Image Id:</string>
    <string name="title_payment_method">Payment Method\n</string>
    <string name="title_orders">Orders</string>
    <string name="title_contact" />
    <string name="title_conntactt">Contact</string>
    <string name="title_phone">Phone</string>
    <string name="title_body_sms">Body</string>
    <string name="title_multi">Multi Threading\n</string>
    <string name="title_multi_threading">Multi Threading</string>
    <string name="title_handler_send_message">Handler Send Messgae</string>
    <string name="titlte_handler_post_message">Hander Post Message</string>
    <string name="title_async_task">ASync Task</string>
    <string name="title_draw">Draw</string>
    <string name="title_numberofcontact">Number Of Contact</string>
    <string name="title_create_contact">Create Contact</string>
</resources>
