<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnDraw"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EmployeeHealthcareActivity">

  <TextView
      android:id="@+id/textView5"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/title_employee_healthcare"
      android:textAlignment="center"
      android:textColor="#F41212"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/title_height" />

  <EditText
      android:id="@+id/edtHeight"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="number" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/title_weight" />

  <EditText
      android:id="@+id/edtWeight"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="number" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <Button
        android:id="@+id/btn_cal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/title_calculate" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/title_clear" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/title_exit_close" />

  </LinearLayout>

  <TextView
      android:id="@+id/txtResults"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#96C2EB"
      android:textColorHighlight="#99771D"
      android:textSize="24sp" />
</LinearLayout>