<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_username"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_login_username_hint"
        android:inputType="text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_password_hint"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/chkSaveLoginInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_save_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:onClick="do_login"
            android:id="@+id/btnLogin"
            android:layout_width="271dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:text="@string/title_login_btn"
            tools:ignore="OnClick" />

        <ImageButton
            android:onClick="do_exit"
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_exitt"
            tools:ignore="OnClick" />

    </LinearLayout>
</LinearLayout>